--- a/rock_paper_scissors.css
+++ b/rock_paper_scissors.css
@@ -6,3 +6,14 @@
     margin: 20px;
     padding: 5px;
 }
+
+h2 {
+    float: left;
+}
+
+p.resultText {
+    float: left;
+    position: relative;
+    left: 25px;
+    margin: 25px 2px 5px 2px;
+}
